Finally fixed the burger button which could not open the sidebar on mobile! (:

--- a/frontend/src/pages/dashboard/Dashboard.css
+++ b/frontend/src/pages/dashboard/Dashboard.css
@@ -8,6 +8,7 @@
     margin: 0;
     padding: 0;
     background-color: rgb(0, 0, 200);
+    z-index: 2;
     
 }
 .Sidebar-Container{
@@ -77,6 +78,7 @@
 
     .Main-Container {
         width: 100% !important;
+        z-index: 1;
     }
     
 }
